# HDF5-Schema

./: .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
docs/images/: src.pptx
examples/: 01_basic_validation.py  02_pattern_matching.py  03_conditional_validation.py  04_schema_generation.py  05_advanced_boolean_logic.py  README.md  scratch.py
hdf5schema/: __init__.py  exceptions.py  generate_schema.py  schema.py  validate.py  validator.py
hdf5schema/schemas/: __init__.py  dataset_meta_schema.json  group_meta_schema.json
tests/: README.md  test_boolean_expressions.py  test_conditonals.py  test_dataset_schema.py  test_dependent.py  test_format_validation.py  test_group_schema.py  test_integration.py  test_validator.py
